--- a/index.html
+++ b/index.html
@@ -16,29 +16,33 @@
                 <form>
                     <h2 class="contact-form-heading">Sign up</h2>
                     <p class="contact-form-intro">Enter your contact information, and then there will be cake. 🍰</p>
-                    <label for="name">name</label>
-                    <input class="contact-input" id="name" type="text" placeholder="Full name" />
-                    <label for="address">address</label>
-                    <input class="contact-input" id="address" type="text" placeholder="Address" />
+                    <label for="name">Full name</label>
+                    <input class="contact-input" id="name" type="text" placeholder="Sherlock Holmes" />
+                    <label for="address">Address</label>
+                    <input class="contact-input" id="address" type="text" placeholder="221B Baker Street" />
                     <div class="address">
                         <div class="city">
-                            <label for="city">city</label>
-                            <input class="address-input" id="city" type="text" placeholder="City" />
+                            <label for="city">City</label>
+                            <select class="city-select" id="city" type="text" placeholder="London">
+                                <option value="london">London</option>
+                                <option value="manchester">Manchester</option>
+                                <option value="leeds">Leeds</option>
+                            </select>
                         </div>
                         <div class="postcode">
-                            <label for="postcode">postcode</label>
-                            <input class="address-input" id="postcode" type="text" placeholder="Postcode" />
+                            <label for="postcode">Postcode</label>
+                            <input class="address-input" id="postcode" type="text" placeholder="NW1 6XE" />
                         </div>
                     </div>
-                    <label for="email">email</label>
-                    <input class="contact-input" id="email" type="text" placeholder="Email" />
-                    <div class="radio-container">
-                        <p>Do you have cats?</p>
+                    <label for="email">Email</label>
+                    <input class="contact-input" id="email" type="text" placeholder="sherlock.holmes@gmail.com" />
+                    <fieldset class="radio-container">
+                        <legend>Do you have cats?</legend>
                         <label for="yes">Yes</label>
                         <input class="contact-radio" id="yes" type="radio" name="cats" />
                         <label for="no">No</label>
                         <input class="contact-radio" id="no" type="radio" name="cats" />
-                    </div>
+                    </fieldset>
                     <button class="contact-submit-button" type="button">Send message 🎉</button>
                 </form>
                 <img class="contact-image" src="images/drone-contact.png" alt="A woman seeing a drone approaching." />
@@ -46,3 +50,9 @@
         </main>
     </body>
 </html>
+
+<!--
+Challenge:
+1. On your own, look up the <fieldset> and <legend> tags and how to use them for radio buttons.
+2. Update the elements used to group our radio buttons so that the <fieldset> and <legend> elements are used instead.
+-->
